--- a/main.html
+++ b/main.html
@@ -8,6 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="gameContainer"></div>
+
+ 
+
+ 
+
+	<!-- #scoreContainer contains the scores -->
+
+	<div id="scoreContainer">
+
+		<div class="scoreBoard">Your Score: <span id="pointsEarned">0</span></div>
+
+	</div>
+
+ 
+
+ 
+
+	<!-- #onScreenControllers contains the navigation buttons for mobile screens -->
+
+	<div id="onScreenControllers">
+
+		<button id="leftButton"></button>
+
+		<div>
+
+			<button id="upButton"></button>
+
+			<button id="downButton"></button>
+
+		</div>
+
+		<button id="rightButton"></button>
+
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
